fixed the bug with text jumping out of section

--- a/app/assets/stylesheets/components/_spacing.scss
+++ b/app/assets/stylesheets/components/_spacing.scss
@@ -15,6 +15,10 @@
   margin-right: 0.5em;
 }
 
+.xs-left-margin {
+  margin-left: 0.1em;
+}
+
 .md-left-margin-gt-lg {
   margin-left: 0;
 
